--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,3 @@
-# Require CMake 3.15+ (matching scikit-build-core) Use new versions of all
-# policies up to CMake 3.27
 cmake_minimum_required(VERSION 3.15...3.27)
 
 # Scikit-build-core sets these values for you, or you can just hard-code the
@@ -11,19 +9,19 @@ project(
 
 set(CMAKE_CXX_STANDARD 17)
 
-# Find the module development requirements (requires FindPython from 3.17 or
-# scikit-build-core's built-in backport)
-find_package(Python REQUIRED COMPONENTS Interpreter Development.Module)
-find_package(pybind11 CONFIG REQUIRED)
-find_package(SDL3 REQUIRED)
+find_package(Python REQUIRED COMPONENTS Interpreter Development.Module) # Python
+find_package(pybind11 CONFIG REQUIRED) # PyBind11
+find_package(SDL3 REQUIRED) # SDL3 core
 
-# Add a library using FindPython's tooling (pybind11 also provides a helper like
-# this)
 python_add_library(_core MODULE
+  src/_globals.cpp
+  src/constants.cpp
   src/core.cpp
-  src/window.cpp
   src/event.cpp
+  src/key.cpp
+  src/math.cpp
   src/time.cpp
+  src/window.cpp
   WITH_SOABI
 )
 target_link_libraries(_core PRIVATE pybind11::headers SDL3::SDL3)
