--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Install dependencies
         run: python -m pip install --upgrade pip setuptools wheel scikit-build-core cibuildwheel
@@ -45,12 +45,15 @@ jobs:
           fi
         shell: bash
 
-      - uses: pypa/cibuildwheel@v2.16.2
+      - uses: pypa/cibuildwheel@v2.23.3
         env:
           CIBW_SKIP: "pp* cp36* cp37*"
           CIBW_BUILD: "cp310-* cp311-* cp312-*"
 
-      - uses: actions/upload-artifact@v3
+      - name: Confirm wheel build output
+        run: ls -lh wheelhouse
+
+      - uses: actions/upload-artifact@v4
         with:
           name: wheels
           path: ./wheelhouse/*.whl
