--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: python -m pip install --upgrade pip setuptools wheel scikit-build-core cibuildwheel
-
-      - name: Install 7z on macOS
-        if: runner.os == 'macOS'
-        run: brew install p7zip
+        run: |
+          python -m pip install --upgrade pip
+          pip install scikit-build-core==0.11.2 cibuildwheel==2.23.3
+        timeout-minutes: 5
 
       - name: Download SDL3 binary
         run: |
@@ -32,9 +31,9 @@ jobs:
             cp sdl3/SDL3.dll src/pykraken/
 
           elif [[ "$RUNNER_OS" == "macOS" ]]; then
-            curl -L -o sdl3.dmg https://github.com/libsdl-org/SDL/releases/download/release-${SDL_VERSION}/SDL3-${SDL_VERSION}.dmg
-            7z x sdl3.dmg -osdl3_mount
-            cp -R sdl3_mount/SDL3.framework/Versions/A/SDL3 src/pykraken/libSDL3.dylib
+            curl -LO https://github.com/libsdl-org/SDL/releases/download/release-${SDL_VERSION}/SDL3-${SDL_VERSION}.zip
+            unzip SDL3-${SDL_VERSION}.zip -d sdl3
+            cp sdl3/libSDL3.dylib src/pykraken/
 
           elif [[ "$RUNNER_OS" == "Linux" ]]; then
             curl -L -o sdl3.tar.gz https://github.com/libsdl-org/SDL/releases/download/release-${SDL_VERSION}/SDL3-${SDL_VERSION}.tar.gz
