--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,65 +1,75 @@
-name: Build Wheels (Windows Only)
+name: Build Wheels
 
 on:
   push:
     branches: [main]
   pull_request:
+    branches: [main]
+  workflow_dispatch:
+  workflow_call:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  build:
-    runs-on: windows-latest
+  build_wheels:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-latest, macos-15]
+
+    env:
+      MACOSX_DEPLOYMENT_TARGET: "15.0"
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install dependencies
+      # ------------------ MacOS ------------------
+      - name: Install dependencies (macOS)
+        if: runner.os == 'macOS'
         run: |
-          python -m pip install --upgrade pip
-          pip install scikit-build-core==0.11.2 cibuildwheel==2.23.3
-        timeout-minutes: 5
+          brew install sdl3 sdl3_image
 
-      - name: Download SDL3 devel (Windows)
+      # ------------------ Windows ------------------
+      - name: Install dependencies (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
         run: |
-          $SDL_VERSION = "3.2.14"
+          $SDL_VERSION = "3.2.18"
+          $SDL_IMAGE_VERSION = "3.2.4"
+
+          # Download and extract SDL3
           Invoke-WebRequest -Uri "https://github.com/libsdl-org/SDL/releases/download/release-$SDL_VERSION/SDL3-devel-$SDL_VERSION-VC.zip" -OutFile "sdl3.zip"
-          Expand-Archive -Path "sdl3.zip" -DestinationPath "sdl3"
-          Copy-Item "sdl3/SDL3-$SDL_VERSION/lib/x64/SDL3.dll" -Destination "src/pykraken/"
-          echo "SDL3_CMAKE_PATH=${PWD}/sdl3/SDL3-$SDL_VERSION/cmake" | Out-File -FilePath $env:GITHUB_ENV -Append
-        shell: powershell
+          Expand-Archive -Path "sdl3.zip" -DestinationPath "sdl3_temp"
+          $SDL3_PATH = (Get-ChildItem -Path "sdl3_temp/SDL3-*" | Select-Object -First 1).FullName
+          echo "SDL3_DIR=$SDL3_PATH/cmake" | Out-File -FilePath $env:GITHUB_ENV -Append
+          Copy-Item "$SDL3_PATH/lib/x64/SDL3.dll" -Destination "src/pykraken/"
 
-      - name: Download SDL3_image devel (Windows)
-        run: |
-          $SDL_image_VERSION = "3.2.4"
-          Invoke-WebRequest -Uri "https://github.com/libsdl-org/SDL_image/releases/download/release-$SDL_image_VERSION/SDL3_image-devel-$SDL_image_VERSION-VC.zip" -OutFile "sdl3-image.zip"
-          Expand-Archive -Path "sdl3-image.zip" -DestinationPath "sdl3"
-          Copy-Item "sdl3/SDL3_image-$SDL_image_VERSION/lib/x64/SDL3_image.dll" -Destination "src/pykraken/"
+          # Download and extract SDL3_image
+          Invoke-WebRequest -Uri "https://github.com/libsdl-org/SDL_image/releases/download/release-$SDL_IMAGE_VERSION/SDL3_image-devel-$SDL_IMAGE_VERSION-VC.zip" -OutFile "sdl3_image.zip"
+          Expand-Archive -Path "sdl3_image.zip" -DestinationPath "sdl3_image_temp"
+          $SDL_IMAGE_PATH = (Get-ChildItem -Path "sdl3_image_temp/SDL3_image-*" | Select-Object -First 1).FullName
+          echo "SDL3_image_DIR=$SDL_IMAGE_PATH/cmake" | Out-File -FilePath $env:GITHUB_ENV -Append
+          Copy-Item "$SDL_IMAGE_PATH/lib/x64/SDL3_image.dll" -Destination "src/pykraken/"
 
-          $SDL3_image_ROOT = "${PWD}/sdl3/SDL3_image-$SDL_image_VERSION"
-          echo "SDL3_image_ROOT=$SDL3_image_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
-          echo "SDL3_image_DIR=$SDL3_image_ROOT/cmake" | Out-File -FilePath $env:GITHUB_ENV -Append
-          echo "CMAKE_PREFIX_PATH=$SDL3_image_ROOT;${env:CMAKE_PREFIX_PATH}" | Out-File -FilePath $env:GITHUB_ENV -Append
-          
-          $env:SDL3_image_DIR = "$SDL3_image_ROOT/cmake"
-          $env:CMAKE_PREFIX_PATH = "$SDL3_image_ROOT;${env:CMAKE_PREFIX_PATH}"
+          # Add SDL3 bin to PATH for CMake find_package to work correctly
+          echo "$SDL3_PATH/lib/x64" | Out-File -FilePath $env:GITHUB_PATH -Append
 
-
-          echo "SDL3_image_CMAKE_PATH=${PWD}/sdl3/SDL3_image-$SDL_image_VERSION/cmake" | Out-File -FilePath $env:GITHUB_ENV -Append
-        shell: powershell
-
-      - name: Build wheels with cibuildwheel
-        uses: pypa/cibuildwheel@v2.23.3
-        env:
-          CIBW_ENVIRONMENT_WINDOWS: >
-            SDL3_DIR="${SDL3_CMAKE_PATH}"
-            SDL3_image_DIR="${SDL3_image_CMAKE_PATH}"
-          CIBW_SKIP: "pp* cp36* cp37*"
-          CIBW_BUILD: "cp310-* cp311-* cp312-* cp313-*"
-
-      - name: Confirm wheel build output
-        run: dir wheelhouse
-
-      - uses: actions/upload-artifact@v4
+      # ------------------ Build Wheels ------------------
+      - name: Install uv for speed
+        uses: astral-sh/setup-uv@v6
         with:
-          name: wheels
+          version: "latest"
+
+      - name: Build and test wheels
+        uses: pypa/cibuildwheel@v3.0.1
+
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-${{ matrix.os }}
           path: ./wheelhouse/*.whl
-          retention-days: 7
+          compression-level: 0
