Remove example files and update project metadata
Deleted main.py and kn112.png example files. Updated pyproject.toml: bumped version to 0.1.0, expanded Python version/classifier support, added new project URLs, and improved metadata for broader compatibility and documentation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "kraken-engine"
-version = "0.0.1"
+version = "0.1.0"
 authors = [
   { name = "Derrick Martinez" },
 ]
@@ -12,15 +12,28 @@ description = "Python bindings for Kraken Engine"
 readme = "README.md"
 requires-python = ">=3.10"
 classifiers = [
+  "Programming Language :: Python",
   "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Topic :: Games/Entertainment",
+  "Topic :: Multimedia :: Graphics",
+  "Topic :: Software Development :: Libraries :: pykraken",
   "Operating System :: Microsoft :: Windows",
+  "Operating System :: MacOS",
 ]
 license = "MIT"
 license-files = ["LICENSE"]
 
 [project.urls]
-Homepage = "https://github.com/Kraken-Engine/PyKraken"
+Homepage = "https://docs.krakenengine.org/"
 Issues = "https://github.com/Kraken-Engine/PyKraken/issues"
+Documentation = "https://docs.krakenengine.org/docs/getting-started/introduction"
+Release Notes = "https://github.com/Kraken-Engine/PyKraken/releases"
+Source = "https://github.com/Kraken-Engine/PyKraken"
 
 [tool.scikit-build]
 wheel.packages = ["src/pykraken"]
