initial mixer commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ pybind11_add_module(_core MODULE
   src/key.cpp
   src/line.cpp
   src/math.cpp
+  src/mixer.cpp
   src/mouse.cpp
   src/rect.cpp
   src/renderer.cpp
